# collagraph

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  test.py
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ci.yml  docs.yml
bench/: compare_runs.py  conftest.py  test_component_mount.py  test_creation.py  test_keyed_list.py  test_list_grow.py  test_unkeyed_list.py  test_update_depth.py
collagraph/: __init__.py  __main__.py  collagraph.py  compare.py  component.py  dsl.py  fragment.py  hot_reload.py  types.py  weak.py
collagraph/__pyinstaller/: __init__.py  hook-collagraph.py
collagraph/cgx/: cgx.py  importer.py
collagraph/components/: __init__.py
collagraph/renderers/: __init__.py  dict_renderer.py  dom_renderer.py  pygfx_renderer.py  pyside_renderer.py  wx_renderer.py
collagraph/sfc/: __init__.py  compiler.py  importer.py  parser.py
docs/: README.md  SETUP.md  architecture.md  index.md
docs/api/: renderer.md
docs/examples/: pygfx-examples.md  pyside-examples.md
docs/getting-started/: cli.md  first-component.md  installation.md
docs/guide/: components.md  events.md  hot-reload.md  provide-inject.md  python-views.md  reactivity.md  slots.md  template-syntax.md
docs/internals/: architecture.md
docs/reference/: component-api.md  directives.md  renderer-api.md
docs/renderers/: overview.md  pygfx.md  pyside.md
examples/: app.py  cgx-component-example.py  cgx_component_example.cgx  combined-example.py  combobox-example.py  component-example.py  debug.py  debug_example.cgx  dialog-example.py  dialog_example.cgx  dialog_example_window.cgx  layout-example.py  lists-example.py  point_cloud.py  pygfx-example.py  pygfx-slider-example.py  pyside-example.py  slider-example.py  todo-example.py  tree_view.cgx  tree_view_example.py  tree_widget.cgx  tree_widget_example.py  widgets-example.py
examples/pygfx/: README.md  app_point_cloud.cgx  button.cgx  combined-example.py  component-example.py  landmarks.cgx  numberpad.cgx  point.cgx  point_cloud.cgx  point_cloud.py  pygfx-component.cgx  pygfx-example.py  pygfx-slider-example.py  render_widget.cgx
examples/pyscript/: README.md  pyscript.cgx  pyscript.html
examples/pyscript-development/: README.md  pyscript.cgx  pyscript.html
examples/pyscript-packaging/: README.md  index.html  main.py  pyproject.toml  setup.cfg
examples/pyscript-packaging/app/: __init__.py  app.cgx
examples/pyscript-scripting/: README.md  pyscript.html
examples/pyside/: app.py  big_list.cgx  cgx_component_example.cgx  combobox-example.py  combobox_example.cgx  counter.cgx  counter_view.py  debug_example.cgx  dialog_example.cgx  dialog_example_window.cgx  flow_layout.py  item.cgx  keyed_list_demo.cgx  keyed_tree_demo.cgx  layout-example.py  layout_example.cgx  list_and_form.cgx  lists-example.py  lists_example.cgx  slider-example.py  slider_example.cgx  tabs-example.py  tabs_example.cgx  template_refs.cgx  todo-example.py  todo_example.cgx  todo_list.cgx  todo_view.py  tree_dnd_example.cgx  tree_dnd_item.cgx  tree_dnd_model.py  tree_dnd_widget.py  tree_view.cgx  tree_view_example.cgx  tree_view_item.cgx  tree_view_model.cgx  tree_widget.cgx  tree_widget_example.cgx  tree_widget_item.cgx  treewidget_drag_drop_node.cgx  (+2 more)
examples/wx/: counter.cgx  form_example.cgx  simple.cgx  todo_app.cgx
pygui/: __init__.py  pygfx_renderer.py  types.py
pygui/renderers/: __init__.py  dict_renderer.py  pygfx_renderer.py
tests/: conftest.py  test_anchors.py  test_attributes_dynamic.py  test_attributes_static.py  test_cli_view.py  test_collagraph.py  test_compare_functions.py  test_component.py  test_component_events.py  test_component_life_cycle.py  test_component_provide_inject.py  test_component_slots.py  test_directive_else.py  test_directive_else_if.py  test_directive_for.py  test_directive_for_keyed.py  test_directive_for_keyed_multi_root.py  test_directive_for_keyed_nested.py  test_directive_for_keyed_reverse.py  test_directive_if.py  test_directive_if_no_unnecessary_remount.py  test_events.py  test_fibers.py  test_hot_reload.py  test_hot_reload_preservation.py  test_hot_reload_view.py  test_kolla.py  test_list_reverse_reordering.py  test_load_string.py  test_multi_root_component_reordering.py  test_nested_component_reordering.py  test_parser.py  test_pygfx_renderer.py  test_pygui.py  test_pyside_elements.py  test_pyside_renderer.py  test_reconciliation.py  test_reconciliation_advanced.py  test_resolve_names.py  test_sfc_comments.py  (+17 more)
tests-legacy/: test_component_slots.py
tests-legacy/cgx/: test_cgx_resolve_names.py
tests-legacy/data/: content.cgx  directive_bind_multiple.cgx  directive_else.cgx  directive_for.cgx  directive_for_elaborate.cgx  directive_if_elaborate.cgx  directive_typo.cgx  multiple_root_elements.cgx  template.cgx
tests-legacy/pyside/: test_widget.py
tests/cgx/: test_cgx_callbacks.py  test_cgx_component_use.py  test_cgx_import.py  test_cgx_linting_support.py  test_cgx_resolve_names.py  test_cgx_shadowing.py  test_cgx_slots.py  test_cgx_template_directives.py  test_cgx_text_elements.py
tests/data/: app.cgx  container.cgx  container_default.cgx  directive_bind.cgx  directive_bind_context.cgx  directive_bind_multiple.cgx  directive_bind_state_and_props.cgx  directive_boolean_casting.cgx  directive_else.cgx  directive_else_if.cgx  directive_for.cgx  directive_for_enumerate.cgx  directive_for_lambdas.cgx  directive_for_nested.cgx  directive_if.cgx  directive_model.cgx  directive_on.cgx  directive_typo.cgx  example.cgx  example.py  file_dunder.cgx  func_import.cgx  multiple_classes_right_order.cgx  multiple_classes_wrong_order.cgx  multiple_root_elements.cgx  no_component_class.cgx  resolve_names.cgx  shadow_imports.cgx  simple.cgx  slots.cgx  slots_named.cgx  template.cgx  test_pyside_update.cgx  text_elements.cgx
tests/pyinstaller/: expected_output.json  test_pyinstaller.sh
tests/pyside/: conftest.py  lists.cgx  test_pyside_ci.py  test_pyside_elements.py  test_pyside_sfc.py  (+12 more)
tests_legacy/: test_component.py  test_template_tags.py
(+74 files in other folders)
