[project]
name = "collagraph"
version = "0.7.0"
description = "Reactive user interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "observ>=0.14.1",
]
authors = [
	{ name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com"},
	{ name = "Korijn van Golen", email = "korijn@gmail.com"}
]
license = "MIT"

[project.scripts]
collagraph = "collagraph.__main__:run"

[dependency-groups]
dev = [
    "rich",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "twine",
]
# When PySide6 is not installed, then pytest-qt will break the test suite.
# But pytest-qt can't be marked as an optional dev dependency. So instead
# it is now part of a group which can be installed as follows:
#  > uv sync --group dev --group pyside-dev --extra pyside
pygfx = ["pygfx"]
pyside = ["pyside6~=6.6"]
pyside-dev = [
    "pytest-qt",
    "pytest-xvfb",
]

[tool.ruff.lint.per-file-ignores]
"collagraph/__init__.py" = ["I001"]  # unsorted-imports
"collagraph/renderers/**/__init__.py" = ["F401"]  # unused-import
"collagraph/renderers/__init__.py" = ["E402"]  # module-import-not-at-top-of-file
"tests/pyside/test_*.py" = ["E402"]  # module-import-not-at-top-of-file
"tests/*" = ["N806", "N802"]  # non-lowercase-variable-in-function, invalid-function-name
"collagraph/__pyinstaller/*" = ["N999"]  # invalid-module-name
"examples/*" = ["N999", "N802"]  # invalid-module-name, invalid-function-name
"examples/pyside/flow_layout.py" = ["N802"]  # invalid-function-name

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]
